# teaser_generation

./: .gitignore  LICENSE  README.md  pyproject.toml
codes/: clean_audio_transcripts.py  create_embeddings_and_query.py  get_timestamps_from_embeds_output.py  get_videos_from_url.py  main.py  making_teaser_from_timestamps.py  ollama_summarization_voiceover.py
codes/backend/: clean_visual_descriptions.py  config.py  create_embeddings_and_query.py  db.py  db_helper.py  gemini_for_timestamps.py  get_description_from_blip.py  get_timestamps_from_embeds_output.py  get_videos_from_url.py  main.py  main_fastapi.py  making_teaser_from_timestamps.py  ollama_summarization_voiceover.py  transcribe_audio_from_whisper.py  visual_index.faiss  visual_mapping.json
codes/frontend/: .env  package-lock.json  package.json  vite.config.js
codes/frontend/src/: App.jsx
codes/frontend/src/api/: auth.js
codes/frontend/src/components/: Header.jsx  VideoInput.jsx
codes/frontend/src/pages/: Cinematic.jsx  Home.jsx  Landing.jsx  Learning.jsx  Login.jsx  Profile.jsx  Result.jsx  Signup.jsx
codes/frontend/src/services/: api.js
teaser_generation-main/: README.md
teaser_generation-main/codes/: based_on_orig_transcripts.py  get_videos_from_url.py  main.py  making_teaser_from_timestamps.py  transcribe_audio_from_whisper.py
