[project]
name = "teaser-generation"
version = "0.1.0"
description = "AI-powered teaser generation workflow"
requires-python = ">=3.10"

[project.dependencies]
boto3 = "*"
python-dotenv = "*"
yt-dlp = "*"
torch = "*"
whisper-timestamped = "*"
transformers = "*"
opencv-python = "*"
scenedetect = "*"
sentence-transformers = "*"
faiss-cpu = "*"
ollama = "*"
pyttsx3 = "*"
pydantic = "*"
moviepy = "*"
numpy = "*"
pandas = "*"
tqdm = "*"
